--- a/services.html
+++ b/services.html
@@ -270,7 +270,7 @@
     <div class="bg-[#051744] text-white p-8 grid grid-cols-1 md:grid-cols-4 gap-4 ">
         <div>
             <h3 class="text-xl font-bold mb-3">About Well Done Sourcing.</h3>
-            <p class="text-justify">Stylish Threads Co. is a global trading company managing the source
+            <p class="text-justify">Well Done Sourcing is a global trading company managing the source
                 of supply and the delivery of textile products. The main focus of our business is to
                 provide apparel sourcing services to our esteemed clients to allow them a most
                 satisfying buying experience.</p>
@@ -282,9 +282,11 @@
             House 465 (2nd floor), Road 08,<br>
             DOHS Baridhara,<br>
             Cantonment,Dhaka 1206,Bangladesh.</p>
-            <p class="mt-3"><i class="fa-solid fa-envelope"></i> info@stylishthreadsco.com</p>
-            <p> <i class="fa-solid fa-phone"></i> +123 456 789 000<br>
-                <i class="fa-solid fa-phone"></i> +123 456 789 001
+            <p class="mt-3"><i class="fa-solid fa-envelope"></i> info@welldonebd.net</p>
+            <p> <i class="fa-solid fa-phone"></i> +880 1768 766333<br>
+                <i class="fa-solid fa-phone"></i> +880 1711 858387
+
+
             </p>
         </div>
         <div>
