--- a/denim-men.html
+++ b/denim-men.html
@@ -82,7 +82,7 @@
                                 <a href="#" class="block py-2 px-3 text-white hover:bg-blue-700">Our Products</a>
                                 <div class="dropdown-menu">
                                     <div class="dropdown">
-                                        <a href="#">Knit</a>
+                                        <a href="knit-products.html">Knit</a>
                                         <div class="submenu">
                                             <a href="knit-man.html">Men</a>
                                             <a href="knit-women.html">Women</a>
@@ -90,7 +90,7 @@
                                         </div>
                                     </div>
                                     <div class="dropdown">
-                                        <a href="#">Woven</a>
+                                        <a href="woven-products.html">Woven</a>
                                         <div class="submenu">
                                             <a href="woven-men.html">Men</a>
                                             <a href="woven-women.html">Women</a>
@@ -98,7 +98,7 @@
                                         </div>
                                     </div>
                                     <div class="dropdown">
-                                        <a href="#">Sweater</a>
+                                        <a href="sweater-products.html">Sweater</a>
                                         <div class="submenu">
                                             <a href="sweater-men.html">Men</a>
                                             <a href="sweater-women.html">Women</a>
@@ -148,7 +148,7 @@
                                 <a href="#" class="text-white  py-2 px-3 hover:bg-blue-700">Our Products</a>
                                 <div class="dropdown-menu absolute hidden">
                                     <div class="dropdown relative">
-                                        <a href="#">Knit</a>
+                                        <a href="knit-products.html">Knit</a>
                                         <div class="submenu absolute hidden">
                                             <a href="knit-man.html">Men</a>
                                             <a href="knit-women.html">Women</a>
@@ -156,7 +156,7 @@
                                         </div>
                                     </div>
                                     <div class="dropdown relative">
-                                        <a href="#">Woven</a>
+                                        <a href="woven-products.html">Woven</a>
                                         <div class="submenu absolute hidden">
                                             <a href="woven-men.html">Men</a>
                                             <a href="woven-women.html">Women</a>
@@ -164,7 +164,7 @@
                                         </div>
                                     </div>
                                     <div class="dropdown relative">
-                                        <a href="#">Sweater</a>
+                                        <a href="sweater-kids.html">Sweater</a>
                                         <div class="submenu absolute hidden">
                                             <a href="sweater-men.html">Men</a>
                                             <a href="sweater-women.html">Women</a>
