--- a/sweater-products.html
+++ b/sweater-products.html
@@ -82,7 +82,7 @@ t <!DOCTYPE html>
                                 <a href="#" class="block py-2 px-3 text-white hover:bg-blue-700">Our Products</a>
                                 <div class="dropdown-menu">
                                     <div class="dropdown">
-                                        <a href="#">Knit</a>
+                                        <a href="knit-products.html">Knit</a>
                                         <div class="submenu">
                                             <a href="knit-man.html">Men</a>
                                             <a href="knit-women.html">Women</a>
@@ -90,7 +90,7 @@ t <!DOCTYPE html>
                                         </div>
                                     </div>
                                     <div class="dropdown">
-                                        <a href="#">Woven</a>
+                                        <a href="woven-products.html">Woven</a>
                                         <div class="submenu">
                                             <a href="woven-men.html">Men</a>
                                             <a href="woven-women.html">Women</a>
@@ -98,7 +98,7 @@ t <!DOCTYPE html>
                                         </div>
                                     </div>
                                     <div class="dropdown">
-                                        <a href="#">Sweater</a>
+                                        <a href="sweater-products.html">Sweater</a>
                                         <div class="submenu">
                                             <a href="sweater-men.html">Men</a>
                                             <a href="sweater-women.html">Women</a>
@@ -148,7 +148,7 @@ t <!DOCTYPE html>
                                 <a href="#" class="text-white  py-2 px-3 hover:bg-blue-700">Our Products</a>
                                 <div class="dropdown-menu absolute hidden">
                                     <div class="dropdown relative">
-                                        <a href="#">Knit</a>
+                                        <a href="knit-products.html">Knit</a>
                                         <div class="submenu absolute hidden">
                                             <a href="knit-man.html">Men</a>
                                             <a href="knit-women.html">Women</a>
@@ -156,7 +156,7 @@ t <!DOCTYPE html>
                                         </div>
                                     </div>
                                     <div class="dropdown relative">
-                                        <a href="#">Woven</a>
+                                        <a href="woven-products.html">Woven</a>
                                         <div class="submenu absolute hidden">
                                             <a href="woven-men.html">Men</a>
                                             <a href="woven-women.html">Women</a>
@@ -164,7 +164,7 @@ t <!DOCTYPE html>
                                         </div>
                                     </div>
                                     <div class="dropdown relative">
-                                        <a href="#">Sweater</a>
+                                        <a href="sweater-products.html">Sweater</a>
                                         <div class="submenu absolute hidden">
                                             <a href="sweater-men.html">Men</a>
                                             <a href="sweater-women.html">Women</a>
@@ -319,7 +319,7 @@ t <!DOCTYPE html>
                 <div class="bg-white rounded-lg overflow-hidden shadow-md">
                     <img src="image/Sweater Products/30.jpg" alt="Placeholder" class="w-full">
                     <div class="p-4">
-                        <h3 class="text-xl font-semibold text-gray-800 mb-2 text-center">Mens 000003</h3>
+                        <h3 class="text-xl font-semibold text-gray-800 mb-2 text-center">Mens 003</h3>
                         
                         <a href="view-caps.html"><button class="bg-gray-500 hover:bg-gray-700 text-white font-bold py-2 px-4 rounded mt-4 w-full">View Details</button></a>
                     </div>
