--- a/contact.html
+++ b/contact.html
@@ -227,12 +227,14 @@
                     </p>
                     <p class="text-gray-600 mb-4">
                         <i class="fas fa-envelope text-blue-500 mr-2"></i>
-                        info@azuretextiles.com
+                        info@welldonebd.net
+
+
                     </p>
                     <p class="text-gray-600">
                         <i class="fas fa-phone-alt text-green-500 mr-2"></i>
-                        +880 1234 567 890,<br>
-                        +880 9876 543 210
+                        +880 1711 858387<br>
+
                     </p>
                 </div>
                 <div class="max-w-xl">
