--- a/index.html
+++ b/index.html
@@ -244,15 +244,15 @@
                 </div>
                 <div>
                     <h1 class="text-3xl font-bold mb-4">WELCOME TO </h2>
-                        <h3 class="text-3xl font-bold mb-4 carousel-text">Well Done Sourcing</h3>
-                        <p class="mb-4 text-justify">Well Done Sourcing Ltd is a globally-recognized fashion buying,
+                        <h3 class="text-3xl font-bold mb-4 carousel-text">Welldone Sourcing</h3>
+                        <p class="mb-4 text-justify">Welldone Sourcing Ltd is a globally-recognized fashion buying,
                             sourcing, distributor, manufacturer & exporter company with an international scope. We are
                             committed to excellence in the fashion industry. Our enthusiastic and entrepreneurial
                             attitude to business has created strong relationships with buyers, manufacturers, &
                             exporters. We have an established client base throughout Asia, Europe, America, Australia
-                            markets comprised of both independent and major retailers. Well Done Sourcing Ltd has built
+                            markets comprised of both independent and major retailers. Welldone Sourcing Ltd has built
                             long-term relationships within all sectors of the fashion industry and has earned both
-                            respect and trust from the trade. Well Done Sourcing is a world class fashion show.Well Done
+                            respect and trust from the trade. Welldone Sourcing is a world class fashion show.Welldone
                             Sourcing is a globally-recognized fashion buying, sourcing, distributor, manufacturer &
                             exporter company with an international scope.</p>
                         <a href="about.html"
@@ -271,7 +271,7 @@
         <div class="max-w-7xl mx-auto px-4">
             <div class="text-center mb-10">
                 <h2 class="text-lg font-semibold uppercase tracking-wide text-[#bf9b7c]">Main Product Item</h2>
-                <h1 class="text-3xl font-bold text-gray-900 mt-2 carousel-text">Well Done Sourcing</h1>
+                <h1 class="text-3xl font-bold text-gray-900 mt-2 carousel-text">Welldone Sourcing</h1>
             </div>
             <div class="grid grid-cols-6 gap-6 mb-16">
                 <!-- Product items -->
@@ -365,7 +365,7 @@
             <div class="max-w-7xl mx-auto px-4 bg-[#f7f4f4]">
                 <h2 class="text-lg font-semibold uppercase tracking-wide text-[#bf9b7c] text-center">OUR ALL Products
                 </h2>
-                <h2 class="text-2xl font-semibold text-gray-800 text-center mb-6">Well Done Sourcing Creation Products.
+                <h2 class="text-2xl font-semibold text-gray-800 text-center mb-6">Welldone Sourcing Creation Products.
                 </h2>
                 <div class="grid grid-cols-1 md:grid-cols-4 gap-6 mb-12 ">
                     <div class="product-card bg-white shadow-lg rounded-lg p-4 flex flex-col items-center text-center">
@@ -421,8 +421,8 @@
 
     <div class="bg-[#051744] text-white p-8 grid grid-cols-1 md:grid-cols-4 gap-4 ">
         <div>
-            <h3 class="text-xl font-bold mb-3">About Well Done Sourcing.</h3>
-            <p class="text-justify">Well Done Sourcing is a global trading company managing the source
+            <h3 class="text-xl font-bold mb-3">About Welldone Sourcing.</h3>
+            <p class="text-justify">Welldone Sourcing is a global trading company managing the source
                 of supply and the delivery of textile products. The main focus of our business is to
                 provide apparel sourcing services to our esteemed clients to allow them a most
                 satisfying buying experience.</p>
@@ -434,9 +434,9 @@
             House 465 (2nd floor), Road 08,<br>
             DOHS Baridhara,<br>
             Cantonment,Dhaka 1206,Bangladesh.</p>
-            <p class="mt-3"><i class="fa-solid fa-envelope"></i> info@welldonebd.net</p>
-            <p> <i class="fa-solid fa-phone"></i> +880 1768 766333<br>
-                <i class="fa-solid fa-phone"></i> +880 1711 858387
+            <p class="mt-3"><i class="fa-solid fa-envelope"></i> info@welldonesourcing.com</p>
+            <p> <i class="fa-solid fa-phone"></i> +880 1711357828<br>
+               
 
 
             </p>
@@ -444,20 +444,20 @@
         <div>
             <h3 class="text-xl font-bold mb-3">Useful Links:</h3>
             <ul class="p-2">
-                <a href="#">
+                <a href="profile.html">
                     <li class="hover:text-blue-700 underline">Our Profile</li>
                 </a>
-                <a href="#">
+                <a href="goal.html">
                     <li class="hover:text-blue-700 underline">Our Goals</li>
                 </a>
-                <a href="#">
+                <a href="how-we-work.html">
                     <li class="hover:text-blue-700 underline">How We Work</li>
                 </a>
-                <a href="#">
+                <a href="mission-vision.html">
                     <li class="hover:text-blue-700 underline">Mission & Vision</li>
                 </a>
-                <a href="#">
-                    <li class="hover:text-blue-700 underline">Zone Tolerance Policy</li>
+                <a href="zero.html">
+                    <li class="hover:text-blue-700 underline">Zero Tolerance Policy</li>
                 </a>
             </ul>
         </div>
@@ -478,7 +478,7 @@
     
     <footer class="bg-[#000e32] text-white font-bold py-4">
         <div class="container mx-auto flex justify-between items-center">
-            <div class="text-gray-400">&copy; 2024 Your Company. All rights reserved.</div>
+            <div class="text-gray-400">&copy; 2024 Welldone Sourcing. All rights reserved.</div>
             <div class="flex items-center">
                 <div class="text-gray-400 mr-2">Designed and Developed by OS IT Solutions Ltd.</div>
                 <a href="https://www.ositsltd.com/" class="flex items-center">
