--- a/sweater-men.html
+++ b/sweater-men.html
@@ -29,17 +29,20 @@
                         Export Oriented Buying & Sourcing House
                 </div>
                 <div class="social-icons ">
-                    <a href="#" class="text-[#051744]">
+                    <a href="https://www.facebook.com/" target="_blank" class="text-[#051744]">
                         <i class=" fa-2x fab fa-facebook-f"></i>
                     </a>
-                    <a href="#" class="ml-6 text-[#051744]">
+                    <a href="https://twitter.com/" target="_blank" class="ml-6 text-[#051744]">
                         <i class=" fa-2x fab fa-twitter"></i>
                     </a>
-                    <a href="#" class="ml-6 text-[#051744]">
+                    <a href="https://www.instagram.com/" target="_blank" class="ml-6 text-[#051744]">
                         <i class="fa-2x fab fa-instagram"></i>
                     </a>
 
-                    <a href="#" class="ml-6 text-[#051744]">
+                    <a href="https://www.whatsapp.com/" target="_blank" class="ml-6 text-[#051744]">
+                        <i class=" fa-2x fab fa-whatsapp"></i>
+                    </a>
+                    <a href="https://www.linkedin.com/login" target="_blank" class="ml-6 text-[#051744]">
                         <i class=" fa-2x fab fa-linkedin-in"></i>
                     </a>
                 </div>
