updated all pages welldoe letter

--- a/about.html
+++ b/about.html
@@ -221,17 +221,17 @@
                         alt="Two professionals discussing work at a table with documents and a laptop" class="mb-4">
                 </div>
                 <div class="md:flex-1 md:pl-8">
-                    <p class="text-gray-700 mb-4"> <span class="font-bold">Well Done Sourcing</span>
+                    <p class="text-gray-700 mb-4"> <span class="font-bold">Welldone Sourcing</span>
                          was established with a mission of providing exceptional and personalized services to our clients & to fulfill this mission from different areas in Asia such as Bangladesh, China, India, Vietnam, Korea etc countries.. Our experienced professional team of expatriates minimizes the communication problems with customers often confront in resulting in efficient handling of business.  </p>
-                    <p class="text-gray-700 mb-4"><span class="font-bold">Well Done Sourcing</span>
+                    <p class="text-gray-700 mb-4"><span class="font-bold">Welldone Sourcing</span>
                        is proud to acknowledge our staff as one of the driving forces of our company’s success. It is comprised of highly-trained professionals and technicians who participate in continuing education to keep abreast of all major market trends and technological developments. Our staff is guided by principles of integrity and ethical business practices to ensure our customers’ confidence.</p>
                     
                 </div>
             </div>
-            <p class="text-gray-700 mt-4"><span class="font-bold">Well Done Sourcing</span>
+            <p class="text-gray-700 mt-4"><span class="font-bold">Welldone Sourcing</span>
                  is committed to develop close ties with our esteemed customers through personalized services, cooperation, and assistance, which translate into the highest standards in quality, delivery time, and value. Our hands-on and versatile management approach allows us to monitor all the processes, from pre-assessments to shipping, in order to address and comply with all of our customers’ needs and expectations.</p>
                  <p class="text-gray-700 mt-4">Currently the hottest destination in world for sourcing of Apparel, Textile, Footwear & socks products is our major strength as we have excellent control over factories who are working dedicatedly for us. We have our own Factories which located in Dhaka and Chittagong. We work on a variety of Apparel, Textile, Footwear & socks products ranging from Fashion to Basics We are specialized in doing a variety of prints / embroideries / appliqués & washes on that items.</p>
-            <p class="text-gray-700 mt-4"><span class="font-bold">Well Done Sourcing</span> was starting his work since February 2010. Due to the hard work and sincerity of elaborate our business into various part of section. We do not compromise with good quality and commitment. We believe that, we can keep our quality and service in future at each and every stage.</p>
+            <p class="text-gray-700 mt-4"><span class="font-bold">Welldone Sourcing</span> was starting his work since February 2010. Due to the hard work and sincerity of elaborate our business into various part of section. We do not compromise with good quality and commitment. We believe that, we can keep our quality and service in future at each and every stage.</p>
             <p class="text-gray-700 mt-4">Our conducted all factories have compliance with Accord, BSCI, ISO, SEDEX and also all essential international textile Certificate.
 
             </p>
@@ -259,7 +259,7 @@
         <div class="ml-12">
 
             <h3 class="text-xl font-bold mb-3">Office Address:</h3>
-            <i class="fa-solid fa-location-dot"></i> Well Done Sourcing<br>
+            <i class="fa-solid fa-location-dot"></i> Welldone Sourcing<br>
             House 465 (2nd floor), Road 08,<br>
             DOHS Baridhara,<br>
             Cantonment,Dhaka 1206,Bangladesh.</p>
@@ -286,7 +286,7 @@
                     <li class="hover:text-blue-700 underline">Mission & Vision</li>
                 </a>
                 <a href="zero.html">
-                    <li class="hover:text-blue-700 underline">Zerp Tolerance Policy</li>
+                    <li class="hover:text-blue-700 underline">Zero Tolerance Policy</li>
                 </a>
             </ul>
         </div>
