--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
             <p class="mb-3">
                 <i class="fas fa-map-marker-alt "></i>
                 Welldone Sourcing<br>
-                House 465 (2nd floor), Road 08,,<br>
+                House 465 (2nd floor), Road 08,<br>
                 DOHS Baridhara,
                 Cantonment,<br>
                 Dhaka - 1230, Bangladesh
