--- a/mission-vision.html
+++ b/mission-vision.html
@@ -221,7 +221,7 @@
                 </div>
                 <div class="md:flex-1 md:pl-8">
                     <p class="text-gray-700 mb-4">
-                        The ambition of <span class="font-bold">Well Done Sourcing</span> is to build up as one of the prime RMG exporters of the globe We are the country’s supreme business entity and producing knit wears is our main business strength. Our mission is to contribute to the greater interest of the people broadly speaking to serve the nation. To satisfy our stated business goal we ensure Laws and Workplace regulations. It is our motto to prioritize the academic qualification and technical expertise to bring the organizational success irrespective of cast, creed color & race. Our corporate vision is to create an outstanding value for customers and other stakeholders. We are committed to develop a great new product and service to create a great company as we strive for excellenc</p>
+                        The ambition of <span class="font-bold">Welldone Sourcing</span> is to build up as one of the prime RMG exporters of the globe We are the country’s supreme business entity and producing knit wears is our main business strength. Our mission is to contribute to the greater interest of the people broadly speaking to serve the nation. To satisfy our stated business goal we ensure Laws and Workplace regulations. It is our motto to prioritize the academic qualification and technical expertise to bring the organizational success irrespective of cast, creed color & race. Our corporate vision is to create an outstanding value for customers and other stakeholders. We are committed to develop a great new product and service to create a great company as we strive for excellenc</p>
                     <p class="text-gray-700 mb-4">In the process we are trying to implement all the suggested Code of Conducts, practices or ethics of internationally reputed and professionally certified organization with a view to having corporate governance. Having continuing professional development, high tech equipment's, high profile industrial trainin</p>
                     
                 </div>
@@ -251,7 +251,7 @@
             <div class="ml-12">
     
                 <h3 class="text-xl font-bold mb-3">Office Address:</h3>
-                <i class="fa-solid fa-location-dot"></i> Well Done Sourcing<br>
+                <i class="fa-solid fa-location-dot"></i> Welldone Sourcing<br>
                 House 465 (2nd floor), Road 08,<br>
                 DOHS Baridhara,<br>
                 Cantonment,Dhaka 1206,Bangladesh.</p>
@@ -278,7 +278,7 @@
                         <li class="hover:text-blue-700 underline">Mission & Vision</li>
                     </a>
                     <a href="zero.html">
-                        <li class="hover:text-blue-700 underline">Zerp Tolerance Policy</li>
+                        <li class="hover:text-blue-700 underline">Zero Tolerance Policy</li>
                     </a>
                 </ul>
             </div>
