--- a/profile.html
+++ b/profile.html
@@ -221,18 +221,18 @@
                         alt="Two professionals discussing work at a table with documents and a laptop" class="mb-4">
                 </div>
                 <div class="md:flex-1 md:pl-8">
-                    <p class="text-gray-700 mb-4"> <span class="font-bold">Well Done Sourcing</span>
+                    <p class="text-gray-700 mb-4"> <span class="font-bold">Welldone Sourcing</span>
                         is a global trading company managing the source of supply and the delivery of textile products.
                         The main focus of our business is to provide apparel sourcing services to our esteemed clients
                         to allow them a most satisfying buying experience. We cater directly to apparel retailers
                         importers worldwide are currently providing services to a wide range of big US, European
                         retailers/importers.</p>
-                    <p class="text-gray-700 mb-4"><span class="font-bold">Well Done Sourcing</span>
+                    <p class="text-gray-700 mb-4"><span class="font-bold">Welldone Sourcing</span>
                         was established with a mission of providing
                         exceptional and personalized services to our clients & to fulfill this mission we have head
                         office in Dhaka, Bangladesh and other support offices in Hong Kong. Our core principle of
                         business is to provide the right product at the right price & at the right time.</p>
-                    <p class="text-gray-700 mb-4"><span class="font-bold">Well Done Sourcing</span>
+                    <p class="text-gray-700 mb-4"><span class="font-bold">Welldone Sourcing</span>
                         is proud to acknowledge our staff as one of the
                         driving forces of our company's success. It is comprised of highly-trained professionals and
                         technicians who participate in continuing education to keep abreast of all major market trends
@@ -240,7 +240,7 @@
                         business practices to ensure our customer's confidence.</p>
                 </div>
             </div>
-            <p class="text-gray-700 mt-4"><span class="font-bold">Well Done Sourcing</span>
+            <p class="text-gray-700 mt-4"><span class="font-bold">Welldone Sourcing</span>
                 is committed to develop close ties with our esteemed
                 customers through personalized services, cooperation, and assistance, which translate into the highest
                 standards in quality, delivery time, and value. Our hands-on and versatile management approach allows us
@@ -274,7 +274,7 @@
             <div class="ml-12">
     
                 <h3 class="text-xl font-bold mb-3">Office Address:</h3>
-                <i class="fa-solid fa-location-dot"></i> Well Done Sourcing<br>
+                <i class="fa-solid fa-location-dot"></i> Welldone Sourcing<br>
                 House 465 (2nd floor), Road 08,<br>
                 DOHS Baridhara,<br>
                 Cantonment,Dhaka 1206,Bangladesh.</p>
@@ -301,7 +301,7 @@
                         <li class="hover:text-blue-700 underline">Mission & Vision</li>
                     </a>
                     <a href="zero.html">
-                        <li class="hover:text-blue-700 underline">Zerp Tolerance Policy</li>
+                        <li class="hover:text-blue-700 underline">Zero Tolerance Policy</li>
                     </a>
                 </ul>
             </div>
