--- a/services.html
+++ b/services.html
@@ -245,11 +245,11 @@
                 </div>
                 <div class="w-full md:w-1/2 px-4">
                     <h3 class="font-semibold mb-2">Preachers & Development:</h3>
-                    <p class="mb-4">Well Done Sourcing
-                        believes in keeping our customers up to date with the current & future market trends & to achieve this desire, our professionals travel to all key trade fairs to be abreast of the trends. Well Done Sourcing
+                    <p class="mb-4">Welldone Sourcing
+                        believes in keeping our customers up to date with the current & future market trends & to achieve this desire, our professionals travel to all key trade fairs to be abreast of the trends. Welldone Sourcing
                         Ltd team keeps on sourcing new products & production facilities / factories to offer our customers more capacities & new techniques.</p>
                         <h2 class="font-semibold mb-">Costing: </h2>
-                        <p class="mb-4">Well Done Sourcin understands the importance of competitive pricing in today’s
+                        <p class="mb-4">Welldone Sourcin understands the importance of competitive pricing in today’s
 
                             competitive market & hence been able to offer our customers the kind of prices they wish for. We are making this possible with large sourcing power & by using large manufacturing setups to create the benefits of economies of scale.
                             
