--- a/cap.html
+++ b/cap.html
@@ -46,6 +46,7 @@
                         <i class=" fa-2x fab fa-linkedin-in"></i>
                     </a>
                 </div>
+
                 <!-- <button id="menuButton"
                     class="inline-flex items-center justify-center p-2 rounded-md text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:bg-gray-100 focus:text-gray-500 transition duration-150 ease-in-out sm:hidden">
                     <i class="fas fa-bars"></i>
@@ -291,7 +292,7 @@
             <div class="ml-12">
     
                 <h3 class="text-xl font-bold mb-3">Office Address:</h3>
-                <i class="fa-solid fa-location-dot"></i> Well Done Sourcing<br>
+                <i class="fa-solid fa-location-dot"></i> Welldone Sourcing<br>
                 House 465 (2nd floor), Road 08,<br>
                 DOHS Baridhara,<br>
                 Cantonment,Dhaka 1206,Bangladesh.</p>
@@ -318,7 +319,7 @@
                         <li class="hover:text-blue-700 underline">Mission & Vision</li>
                     </a>
                     <a href="zero.html">
-                        <li class="hover:text-blue-700 underline">Zerp Tolerance Policy</li>
+                        <li class="hover:text-blue-700 underline">Zero Tolerance Policy</li>
                     </a>
                 </ul>
             </div>
