--- a/faq.html
+++ b/faq.html
@@ -288,7 +288,7 @@
                             </div>
                         </div>
                         <div>
-                            <h2 class="text-xl font-bold mb-4">Well Done Sourcing FAQ (Frequently Answering Questions)</h2>
+                            <h2 class="text-xl font-bold mb-4">Welldone Sourcing FAQ (Frequently Answering Questions)</h2>
                             <div class="space-y-4">
                                 <div class="font-semibold">FACTORY INFORMATION:</div>
                                 <p>Where are the Factory Located?</p>
@@ -328,7 +328,7 @@
             <div class="ml-12">
     
                 <h3 class="text-xl font-bold mb-3">Office Address:</h3>
-                <i class="fa-solid fa-location-dot"></i> Well Done Sourcing<br>
+                <i class="fa-solid fa-location-dot"></i> Welldone Sourcing<br>
                 House 465 (2nd floor), Road 08,<br>
                 DOHS Baridhara,<br>
                 Cantonment,Dhaka 1206,Bangladesh.</p>
@@ -355,7 +355,7 @@
                         <li class="hover:text-blue-700 underline">Mission & Vision</li>
                     </a>
                     <a href="zero.html">
-                        <li class="hover:text-blue-700 underline">Zerp Tolerance Policy</li>
+                        <li class="hover:text-blue-700 underline">Zero Tolerance Policy</li>
                     </a>
                 </ul>
             </div>
