--- a/how-we-work.html
+++ b/how-we-work.html
@@ -224,7 +224,7 @@
                     <h3 class="text-gray-700 mb-4 font-bold">How We Work (Work Style) </h3>
                     <h3 class="text-gray-700 mb-4 font-bold">Reliability means “No last minute surprise”
                     </h3>
-                    <p class="text-gray-700 mb-4"> <span class="font-bold">Well Done Sourcing</span> believe in
+                    <p class="text-gray-700 mb-4"> <span class="font-bold">Welldone Sourcing</span> believe in
                         exploring, understanding, adapting & implementing the best in our business to drive the growth &
                         success of our company as well as meeting the customer need. The team working with us is
                         enthusiastic & has always exceeded the expectations set by the company. Here are the key points
@@ -258,7 +258,7 @@
                 </li>
             </ul>
             <br>
-            <p class="text-gray-700 mb-4"> Well Done Sourcing</span> believe in
+            <p class="text-gray-700 mb-4"> Welldone Sourcing</span> believe in
                 exploring, understanding, adapting & implementing the best in our business to drive the growth &
                 success of our company as well as meeting the customer need. The team working with us is
                 enthusiastic & has always exceeded the expectations set by the company. Here are the key points
@@ -286,7 +286,7 @@
             <div class="ml-12">
     
                 <h3 class="text-xl font-bold mb-3">Office Address:</h3>
-                <i class="fa-solid fa-location-dot"></i> Well Done Sourcing<br>
+                <i class="fa-solid fa-location-dot"></i> Welldone Sourcing<br>
                 House 465 (2nd floor), Road 08,<br>
                 DOHS Baridhara,<br>
                 Cantonment,Dhaka 1206,Bangladesh.</p>
@@ -313,7 +313,7 @@
                         <li class="hover:text-blue-700 underline">Mission & Vision</li>
                     </a>
                     <a href="zero.html">
-                        <li class="hover:text-blue-700 underline">Zerp Tolerance Policy</li>
+                        <li class="hover:text-blue-700 underline">Zero Tolerance Policy</li>
                     </a>
                 </ul>
             </div>
