--- a/sweater-products.html
+++ b/sweater-products.html
@@ -373,7 +373,7 @@ t <!DOCTYPE html>
             <div class="ml-12">
     
                 <h3 class="text-xl font-bold mb-3">Office Address:</h3>
-                <i class="fa-solid fa-location-dot"></i> Well Done Sourcing<br>
+                <i class="fa-solid fa-location-dot"></i> Welldone Sourcing<br>
                 House 465 (2nd floor), Road 08,<br>
                 DOHS Baridhara,<br>
                 Cantonment,Dhaka 1206,Bangladesh.</p>
@@ -400,7 +400,7 @@ t <!DOCTYPE html>
                         <li class="hover:text-blue-700 underline">Mission & Vision</li>
                     </a>
                     <a href="zero.html">
-                        <li class="hover:text-blue-700 underline">Zerp Tolerance Policy</li>
+                        <li class="hover:text-blue-700 underline">Zero Tolerance Policy</li>
                     </a>
                 </ul>
             </div>
