updated all swater men women and kids page

--- a/sweater-women.html
+++ b/sweater-women.html
@@ -217,22 +217,22 @@
             <h1 class="text-center text-3xl font-semibold mb-8">Sweater Women All Products</h1>
             <div class="flex justify-center gap-4">
                 <div class="w-1/4 p-4 bg-white shadow-lg">
-                   <a href="#"> <img src="image/All Products/sweater/women.jpg"
+                   <a href="sweater-women-view.html"> <img src="image/All Products/sweater/women.jpg"
                     alt="Placeholder image of a grey t-shirt with a 'New Orleans Football' print" class="mb-4"></a>
                     <h2 class="text-center text-lg">Womens 001</h2>
                 </div>
                 <div class="w-1/4 p-4 bg-white shadow-lg">
-                   <a href="#"> <img src="image/All Products/sweater/women2.jpg"
+                   <a href="sweater-women-view.html"> <img src="image/All Products/sweater/women2.jpg"
                     alt="Placeholder image of a green t-shirt with a 'Turn in Your Guns' print" class="mb-4"></a>
                     <h2 class="text-center text-lg">Womens 002</h2>
                 </div>
                 <div class="w-1/4 p-4 bg-white shadow-lg">
-                    <a href="#"><img src="image/All Products/sweater/women3.jpg" alt="Placeholder image of a grey long sleeve shirt"
+                    <a href="sweater-women-view.html"><img src="image/All Products/sweater/women3.jpg" alt="Placeholder image of a grey long sleeve shirt"
                         class="mb-4"></a>
                     <h2 class="text-center text-lg">Womens 003</h2>
                 </div>
                 <div class="w-1/4 p-4 bg-white shadow-lg">
-                    <a href="#"><img src="image/All Products/sweater/women4.jpg"
+                    <a href="sweater-women-view.html"><img src="image/All Products/sweater/women4.jpg"
                         alt="Placeholder image of a black t-shirt with a motorcycle print" class="mb-4"></a>
                     <h2 class="text-center text-lg">Womens 004</h2>
                 </div>
