--- a/sweater-kids.html
+++ b/sweater-kids.html
@@ -217,22 +217,22 @@
             <h1 class="text-center text-3xl font-semibold mb-8">Sweater Kids All Products</h1>
             <div class="flex justify-center gap-4">
                 <div class="w-1/4 p-4 bg-white shadow-lg">
-                    <a href="#"><img src="image/All Products/sweater/kids1.jpg"
+                    <a href="sweater-kids-view.html"><img src="image/All Products/sweater/kids1.jpg"
                         alt="Placeholder image of a grey t-shirt with a 'New Orleans Football' print" class="mb-4"></a>
                     <h2 class="text-center text-lg">Kids 001</h2>
                 </div>
                 <div class="w-1/4 p-4 bg-white shadow-lg">
-                   <a href="#"> <img src="image/All Products/sweater/kids2.jpg"
+                   <a href="sweater-kids-view.html"> <img src="image/All Products/sweater/kids2.jpg"
                     alt="Placeholder image of a green t-shirt with a 'Turn in Your Guns' print" class="mb-4"></a>
                     <h2 class="text-center text-lg">Kids 002</h2>
                 </div>
                 <div class="w-1/4 p-4 bg-white shadow-lg">
-                    <a href="#"><img src="image/All Products/sweater/kids3.jpg" alt="Placeholder image of a grey long sleeve shirt"
+                    <a href="sweater-kids-view.html"><img src="image/All Products/sweater/kids3.jpg" alt="Placeholder image of a grey long sleeve shirt"
                         class="mb-4"></a>
                     <h2 class="text-center text-lg">Kids 003</h2>
                 </div>
                 <div class="w-1/4 p-4 bg-white shadow-lg">
-                    <a href="#"><img src="image/All Products/sweater/kids4.jpg"
+                    <a href="sweater-kids-view.html"><img src="image/All Products/sweater/kids4.jpg"
                         alt="Placeholder image of a black t-shirt with a motorcycle print" class="mb-4"></a>
                     <h2 class="text-center text-lg">Kids 004</h2>
                 </div>
