added denim men women and kids pages

--- a/denim-men.html
+++ b/denim-men.html
@@ -217,22 +217,22 @@
             <h1 class="text-center text-3xl font-semibold mb-8"> Mens All Products</h1>
             <div class="flex justify-center gap-4">
                 <div class="w-1/4 p-4 bg-white shadow-lg">
-                    <a href="#"><img src="image/All Products/denim/men1.jpg"
+                    <a href="denim-men-view.html"><img src="image/All Products/denim/men1.jpg"
                         alt="Placeholder image of a grey t-shirt with a 'New Orleans Football' print" class="mb-4"></a>
                     <h2 class="text-center text-lg">Denim Tom-Bottom Men 01</h2>
                 </div>
                 <div class="w-1/4 p-4 bg-white shadow-lg">
-                   <a href="#"> <img src="image/All Products/denim/men2.jpg"
+                   <a href="denim-men-view.html"> <img src="image/All Products/denim/men2.jpg"
                     alt="Placeholder image of a green t-shirt with a 'Turn in Your Guns' print" class="mb-4"></a>
                     <h2 class="text-center text-lg">Denim Tom-Bottom Men 02</h2>
                 </div>
                 <div class="w-1/4 p-4 bg-white shadow-lg">
-                    <a href="#"><img src="image/All Products/denim/men3.jpg" alt="Placeholder image of a grey long sleeve shirt"
+                    <a href="denim-men-view.html"><img src="image/All Products/denim/men3.jpg" alt="Placeholder image of a grey long sleeve shirt"
                         class="mb-4"></a>
                     <h2 class="text-center text-lg">Denim Tom-Bottom Men 03</h2>
                 </div>
                 <div class="w-1/4 p-4 bg-white shadow-lg">
-                    <a href="#"><img src="image/All Products/denim/men4.jpg"
+                    <a href="denim-men-view.html"><img src="image/All Products/denim/men4.jpg"
                         alt="Placeholder image of a black t-shirt with a motorcycle print" class="mb-4"></a>
                     <h2 class="text-center text-lg">Denim Tom-Bottom Men 04</h2>
                 </div>
