added link to the home page

--- a/index.html
+++ b/index.html
@@ -279,42 +279,42 @@
             <div class="grid grid-cols-6 gap-6 mb-16">
                 <!-- Product items -->
                 <div class="product-card bg-white shadow rounded overflow-hidden">
-                    <a href="#"> <img src="image/knit.jpg" alt="Knit clothing item placeholder image"
+                    <a href="knit-products.html"> <img src="image/knit.jpg" alt="Knit clothing item placeholder image"
                             class="w-full h-48 object-cover"></a>
                     <div class="p-4">
                         <h3 class="text-center text-gray-700">Knit</h3>
                     </div>
                 </div>
                 <div class="product-card bg-white shadow rounded overflow-hidden">
-                    <a href="#"><img src="image/woven.jpg" alt="Woven clothing item placeholder image"
+                    <a href="woven-products.html"><img src="image/woven.jpg" alt="Woven clothing item placeholder image"
                             class="w-full h-48 object-cover"></a>
                     <div class="p-4">
                         <h3 class="text-center text-gray-700">Woven</h3>
                     </div>
                 </div>
                 <div class="product-card bg-white shadow rounded overflow-hidden">
-                    <a href="#"> <img src="image/sweater.jpg" alt="Sweater clothing item placeholder image"
+                    <a href="sweater-products.html"> <img src="image/sweater.jpg" alt="Sweater clothing item placeholder image"
                             class="w-full h-48 object-cover"></a>
                     <div class="p-4">
                         <h3 class="text-center text-gray-700">Sweater</h3>
                     </div>
                 </div>
                 <div class="product-card bg-white shadow rounded overflow-hidden">
-                    <a href="#"><img src="image/cap.jpg" alt="Heat wear cap item placeholder image"
+                    <a href="cap.html"><img src="image/cap.jpg" alt="Heat wear cap item placeholder image"
                             class="w-full h-48 object-cover"></a>
                     <div class="p-4">
                         <h3 class="text-center text-gray-700">Heat Wear (Cap)</h3>
                     </div>
                 </div>
                 <div class="product-card bg-white shadow rounded overflow-hidden">
-                    <a href="#"><img src="image/others.jpg" alt="Other clothing items placeholder image"
+                    <a href="others.html"><img src="image/others.jpg" alt="Other clothing items placeholder image"
                             class="w-full h-48 object-cover"></a>
                     <div class="p-4">
                         <h3 class="text-center text-gray-700">Others</h3>
                     </div>
                 </div>
                 <div class="product-card bg-white shadow rounded overflow-hidden">
-                    <a href="#"><img src="image/denim.jpg" alt="Denim top bottom clothing item placeholder image"
+                    <a href="denim-men-view.html"><img src="image/denim.jpg" alt="Denim top bottom clothing item placeholder image"
                             class="w-full h-48 object-cover"></a>
                     <div class="p-4">
                         <h3 class="text-center text-gray-700">Denim Top Bottom</h3>
@@ -372,20 +372,20 @@
                 </h2>
                 <div class="grid grid-cols-1 md:grid-cols-4 gap-6 mb-12 ">
                     <div class="product-card bg-white shadow-lg rounded-lg p-4 flex flex-col items-center text-center">
-                        <a href="#"><img src="image/men1.png" alt="Women's beige cardigan with red floral embroidery"
+                        <a href="knit-men-views.html"><img src="image/men1.png" alt="Women's beige cardigan with red floral embroidery"
                                 class="mb-3"></a>
                         <span class="text-gray-700 font-semibold">Men 004</span>
                     </div>
                     <div class="product-card bg-white shadow-lg rounded-lg p-4 flex flex-col items-center text-center">
-                        <a href="#"><img src="image/women.jpg" alt="Kids' navy blue jacket with patch" class="mb-3"></a>
+                        <a href="kinit-women-views.html"><img src="image/women.jpg" alt="Kids' navy blue jacket with patch" class="mb-3"></a>
                         <span class="text-gray-700 font-semibold">women 001</span>
                     </div>
                     <div class="product-card bg-white shadow-lg rounded-lg p-4 flex flex-col items-center text-center">
-                        <a href="#"><img src="image/kids.jpg" alt="Kids' black sweater" class="mb-3"></a>
+                        <a href="knit-kids-views.html"><img src="image/kids.jpg" alt="Kids' black sweater" class="mb-3"></a>
                         <span class="text-gray-700 font-semibold">Kids 002</span>
                     </div>
                     <div class="product-card bg-white shadow-lg rounded-lg p-4 flex flex-col items-center text-center">
-                        <a href="#"><img src="image/men2.jpg" alt="Kids' grey and black striped sweater"
+                        <a href="knit-men-views.html"><img src="image/men2.jpg" alt="Kids' grey and black striped sweater"
                                 class="mb-3"></a>
                         <span class="text-gray-700 font-semibold">Kids 003</span>
                     </div>
