added pages and link them

--- a/kinit-women-views.html
+++ b/kinit-women-views.html
@@ -240,7 +240,7 @@
                             </div>
                             <div class="w-full sm:w-1/2 md:w-1/4 lg:w-1/4 px-4 mb-4">
                                 <div class="bg-white rounded-lg overflow-hidden shadow-md">
-                                    <a href="#"><img src="image/All Products/women2.jpg" alt="Placeholder" class="w-full">
+                                    <a href="knit-love.html"><img src="image/All Products/women2.jpg" alt="Placeholder" class="w-full">
                                         <div class="p-4"></a>
                                         <h3 class="text-xl font-semibold text-gray-800 mb-2 text-center">Women  002</h3>
                                         
