--- a/knit-products.html
+++ b/knit-products.html
@@ -290,7 +290,7 @@
             </div>
             <div class="w-full sm:w-1/2 md:w-1/4 lg:w-1/4 px-4 mb-4">
                 <div class="bg-white rounded-lg overflow-hidden shadow-md">
-                    <a href="knit-men-views.html"><img src="image/knit all produts/7.jpg" alt="Placeholder" class="w-full"></a>
+                    <a href="knit-love.html"><img src="image/knit all produts/7.jpg" alt="Placeholder" class="w-full"></a>
                     <div class="p-4">
                         <h3 class="text-xl font-semibold text-gray-800 mb-2 text-center">Mens 003</h3>
                         
@@ -300,7 +300,7 @@
             </div>
             <div class="w-full sm:w-1/2 md:w-1/4 lg:w-1/4 px-4 mb-4">
                 <div class="bg-white rounded-lg overflow-hidden shadow-md">
-                    <a href="knit-men-views.html"><img src="image/knit all produts/8.jpg" alt="Placeholder" class="w-full"></a>
+                    <a href="knit-dag.html"><img src="image/knit all produts/8.jpg" alt="Placeholder" class="w-full"></a>
                     <div class="p-4">
                         <h3 class="text-xl font-semibold text-gray-800 mb-2 text-center">Mens 003</h3>
                         
