--- a/knit-women.html
+++ b/knit-women.html
@@ -221,11 +221,11 @@
                 <h2 class="text-center text-lg">Womens 001</h2>
             </div>
             <div class="w-1/4 p-4 bg-white shadow-lg">
-                <a href="kinit-women-views.html"><img src="image/All Products/women2.jpg" alt="Placeholder image of a green t-shirt with a 'Turn in Your Guns' print" class="mb-4"></a>
+                <a href="knit-love.html"><img src="image/All Products/women2.jpg" alt="Placeholder image of a green t-shirt with a 'Turn in Your Guns' print" class="mb-4"></a>
                 <h2 class="text-center text-lg">Womens 002</h2>
             </div>
             <div class="w-1/4 p-4 bg-white shadow-lg">
-                <a href="kinit-women-views.html"><img src="image/All Products/women3.jpg" alt="Placeholder image of a grey long sleeve shirt" class="mb-4"></a>
+                <a href="knit-dag.html"><img src="image/All Products/women3.jpg" alt="Placeholder image of a grey long sleeve shirt" class="mb-4"></a>
                 <h2 class="text-center text-lg">Womens 003</h2>
             </div>
             <div class="w-1/4 p-4 bg-white shadow-lg">
