--- a/knit-full.html
+++ b/knit-full.html
@@ -270,7 +270,7 @@
                             </div>
                             <div class="w-full sm:w-1/2 md:w-1/4 lg:w-1/4 px-4 mb-4">
                                 <div class="bg-white rounded-lg overflow-hidden shadow-md">
-                                    <a href="#"><img src="image/knit all produts/8.jpg" alt="Placeholder" class="w-full">
+                                    <a href="knit-dag.html"><img src="image/knit all produts/8.jpg" alt="Placeholder" class="w-full">
                                         <div class="p-4"></a>
                                         <h3 class="text-xl font-semibold text-gray-800 mb-2 text-center">Mens 004</h3>
                                         
