--- a/knit-love.html
+++ b/knit-love.html
@@ -214,7 +214,7 @@
                 <div class="mb-6">
                     <h1 class="text-2xl font-bold text-gray-800 mb-3 text-center">Mens 001 </h1>
                     <div class="flex items-center mb-3">
-                        <img src="image/knit all produts/5.jpg" alt="Grey T-shirt with New Orleans Football print"
+                        <img src="image/All Products/women2.jpg" alt="Grey T-shirt with New Orleans Football print"
                             class="w-96 h-88 object-cover mr-4">
                         <div class=" px-24">
                             <input type="text" placeholder="DESCRIPTION" class="border-2 border-gray-300 w-full p-2 mb-4 ">
@@ -270,7 +270,7 @@
                             </div>
                             <div class="w-full sm:w-1/2 md:w-1/4 lg:w-1/4 px-4 mb-4">
                                 <div class="bg-white rounded-lg overflow-hidden shadow-md">
-                                    <a href="knit-dag.html"><img src="image/knit all produts/8.jpg" alt="Placeholder" class="w-full">
+                                    <a href="#"><img src="image/knit all produts/8.jpg" alt="Placeholder" class="w-full">
                                         <div class="p-4"></a>
                                         <h3 class="text-xl font-semibold text-gray-800 mb-2 text-center">Mens 004</h3>
                                         
