--- a/knit-women.html
+++ b/knit-women.html
@@ -229,7 +229,7 @@
                 <h2 class="text-center text-lg">Womens 003</h2>
             </div>
             <div class="w-1/4 p-4 bg-white shadow-lg">
-                <a href="kinit-women-views.html"><img src="image/All Products/women4.jpg" alt="Placeholder image of a black t-shirt with a motorcycle print" class="mb-4"></a>
+                <a href="knit-flower.html"><img src="image/All Products/women4.jpg" alt="Placeholder image of a black t-shirt with a motorcycle print" class="mb-4"></a>
                 <h2 class="text-center text-lg">Womens 004</h2>
             </div>
         </div>
