woven man section done

--- a/woven-men.html
+++ b/woven-men.html
@@ -225,11 +225,11 @@
                 <h2 class="text-center text-lg">Mens 002</h2>
             </div>
             <div class="w-1/4 p-4 bg-white shadow-lg">
-                <a href="woven-men-views.html"><img src="image/All Products/woven/men3.jpg" alt="Placeholder image of a grey long sleeve shirt" class="mb-4"></a>
+                <a href="woven-blue.html"><img src="image/All Products/woven/men3.jpg" alt="Placeholder image of a grey long sleeve shirt" class="mb-4"></a>
                 <h2 class="text-center text-lg">Mens 003</h2>
             </div>
             <div class="w-1/4 p-4 bg-white shadow-lg">
-                <a href="woven-men-views.html"><img src="image/All Products/woven/men4.jpg" alt="Placeholder image of a black t-shirt with a motorcycle print" class="mb-4"></a>
+                <a href="wovwn-gray.html"><img src="image/All Products/woven/men4.jpg" alt="Placeholder image of a black t-shirt with a motorcycle print" class="mb-4"></a>
                 <h2 class="text-center text-lg">Mens 004</h2>
             </div>
         </div>
