sweater man and woman page added and updated

--- a/sweater-women.html
+++ b/sweater-women.html
@@ -222,17 +222,17 @@
                     <h2 class="text-center text-lg">Womens 001</h2>
                 </div>
                 <div class="w-1/4 p-4 bg-white shadow-lg">
-                   <a href="sweater-women-view.html"> <img src="image/All Products/sweater/women2.jpg"
+                   <a href="sweater-w-assh.html"> <img src="image/All Products/sweater/women2.jpg"
                     alt="Placeholder image of a green t-shirt with a 'Turn in Your Guns' print" class="mb-4"></a>
                     <h2 class="text-center text-lg">Womens 002</h2>
                 </div>
                 <div class="w-1/4 p-4 bg-white shadow-lg">
-                    <a href="sweater-women-view.html"><img src="image/All Products/sweater/women3.jpg" alt="Placeholder image of a grey long sleeve shirt"
+                    <a href="sweater-merun.html"><img src="image/All Products/sweater/women3.jpg" alt="Placeholder image of a grey long sleeve shirt"
                         class="mb-4"></a>
                     <h2 class="text-center text-lg">Womens 003</h2>
                 </div>
                 <div class="w-1/4 p-4 bg-white shadow-lg">
-                    <a href="sweater-women-view.html"><img src="image/All Products/sweater/women4.jpg"
+                    <a href="sweater-ful.html"><img src="image/All Products/sweater/women4.jpg"
                         alt="Placeholder image of a black t-shirt with a motorcycle print" class="mb-4"></a>
                     <h2 class="text-center text-lg">Womens 004</h2>
                 </div>
