updated denim kids and women pages

--- a/denim-kids.html
+++ b/denim-kids.html
@@ -222,17 +222,17 @@
                     <h2 class="text-center text-lg">Denim Tom-Bottom Kids 01</h2>
                 </div>
                 <div class="w-1/4 p-4 bg-white shadow-lg">
-                    <a href="denim-kids-view.html"><img src="image/All Products/denim/kids2.jpg"
+                    <a href="denim-k-pant.html"><img src="image/All Products/denim/kids2.jpg"
                         alt="Placeholder image of a green t-shirt with a 'Turn in Your Guns' print" class="mb-4"></a>
                     <h2 class="text-center text-lg">Denim Tom-Bottom Kids 02</h2>
                 </div>
                 <div class="w-1/4 p-4 bg-white shadow-lg">
-                    <a href="denim-kids-view.html"><img src="image/All Products/denim/kids3.jpg" alt="Placeholder image of a grey long sleeve shirt"
+                    <a href="denim-k-jak.html"><img src="image/All Products/denim/kids3.jpg" alt="Placeholder image of a grey long sleeve shirt"
                         class="mb-4"></a>
                     <h2 class="text-center text-lg">Denim Tom-Bottom Kids 03</h2>
                 </div>
                 <div class="w-1/4 p-4 bg-white shadow-lg">
-                   <a href="denim-kids-view.html"> <img src="image/All Products/denim/kids4.jpg"
+                   <a href="denim-k-jakss.html"> <img src="image/All Products/denim/kids4.jpg"
                     alt="Placeholder image of a black t-shirt with a motorcycle print" class="mb-4"></a>
                     <h2 class="text-center text-lg">Denim Tom-Bottom Kids 04</h2>
                 </div>
