--- a/denim-k-jakss.html
+++ b/denim-k-jakss.html
@@ -218,7 +218,7 @@
 
                     </h1>
                     <div class="flex items-center mb-3">
-                        <img src="image/All Products/denim/kids.jpg" alt="Grey T-shirt with New Orleans Football print"
+                        <img src="image/All Products/denim/kids4.jpg" alt="Grey T-shirt with New Orleans Football print"
                             class="w-96 h-88 object-cover mr-4">
                         <div class=" px-24">
                             <input type="text" placeholder="DESCRIPTION" class="border-2 border-gray-300 w-full p-2 mb-4 ">
@@ -227,9 +227,10 @@
                         </div>
                     </div>
                 </div>
+      
                 <div class="p-4 m-12">
                     <h2 class="text-3xl font-bold text-gray-800 mb-4 text-center">Related Product</h2>
-                    
+                              <!-- start -->
                     <div class="container mx-auto px-4 py-8">
                         <div class="flex flex-wrap -mx-4">
                             <div class="w-full sm:w-1/2 md:w-1/4 lg:w-1/4 px-4 mb-4">
@@ -314,6 +315,7 @@
                             </div>
                         </div>
                     </div>
+                    <!-- end -->
                 </div>
             </div>
         </div>
