--- a/denim-women.html
+++ b/denim-women.html
@@ -222,17 +222,17 @@
                     <h2 class="text-center text-lg">Denim Tom-Bottom Women 01</h2>
                 </div>
                 <div class="w-1/4 p-4 bg-white shadow-lg">
-                   <a href="denim-women-view.html"> <img src="image/All Products/denim/women1.jpg"
+                   <a href="denim-w-pant1.html"> <img src="image/All Products/denim/women1.jpg"
                     alt="Placeholder image of a green t-shirt with a 'Turn in Your Guns' print" class="mb-4"></a>
                     <h2 class="text-center text-lg">Denim Tom-Bottom Women 02</h2>
                 </div>
                 <div class="w-1/4 p-4 bg-white shadow-lg">
-                    <a href="denim-women-view.html"><img src="image/All Products/denim/women2.jpg" alt="Placeholder image of a grey long sleeve shirt"
+                    <a href="denim-w-pants2.html"><img src="image/All Products/denim/women2.jpg" alt="Placeholder image of a grey long sleeve shirt"
                         class="mb-4"></a>
                     <h2 class="text-center text-lg">Denim Tom-Bottom Women 03</h2>
                 </div>
                 <div class="w-1/4 p-4 bg-white shadow-lg">
-                    <a href="denim-women-view.html"><img src="image/All Products/denim/women3.jpg"
+                    <a href="denim-w-jakss.html"><img src="image/All Products/denim/women3.jpg"
                         alt="Placeholder image of a black t-shirt with a motorcycle print" class="mb-4"></a>
                     <h2 class="text-center text-lg">Denim Tom-Bottom Women 04</h2>
                 </div>
